@@ -1,33 +1,32 @@
 import json
-import sys
 import itertools
 
-from clint import args
+from clint import arguments
+from clint.textui import puts, puts_err, indent, colored
 import sunlight
-from sunlight.service import EntityList, EntityDict
 
 
 def main():
+    args = arguments.Args()
     services = sunlight.available_services()
     service = services.get(args.get(0), None)
 
     if service is not None:
         available_methods = [
-            m for m in dir(service) if not m.startswith('_') and m != 'get'
+            m for m in dir(service) if not m.startswith('_') and m != 'get' and m != 'is_pageable'
         ]
         if args.get(1) in available_methods:
 
             params = dict([
-                (g[0][2:], g[1].get(0)) for g in args.grouped.items()[1:] if
-                g[0].startswith('--')
+                (f.strip('--'), args.value_after(f)) for f in args.flags.all
             ])
             fn_args = [g.split(',') for g in args.grouped.get('_')[2:]]
             fn_args = list(itertools.chain.from_iterable(fn_args))
             resp = getattr(service, args.get(1))(*fn_args, **params)
-            if isinstance(resp, EntityList) or isinstance(resp, EntityDict):
-                resp = resp.data
-            sys.stdout.write(json.dumps(resp, indent=2) + '\n')
-
+            meta = getattr(resp, '_meta', None)
+            if meta:
+                puts(colored.yellow(json.dumps(meta, indent=2)))
+            puts(colored.blue(json.dumps(resp, indent=2) + '\n'))
         else:
             help(methods=available_methods)  # missing or invalid method param
 
@@ -36,17 +35,19 @@ def main():
 
 
 def help(services=None, methods=None):
-    sys.stderr.write("Usage: sunlight <service> <method> [<args>, ...]\n")
+    puts_err("Usage: sunlight <service> <method> [<args>, ...]")
 
     if services:
-        sys.stderr.write("Available services:\n")
-        for s in services:
-            sys.stderr.write("    %s\n" % s)
+        puts_err("Available services:")
+        with indent(4):
+            for s in services:
+                puts_err(s)
 
     if methods:
-        sys.stderr.write("Available methods:\n")
-        for m in methods:
-            sys.stderr.write("    %s\n" % m)
+        puts_err("Available methods:")
+        with indent(4):
+            for m in methods:
+                puts_err(m)
 
 
 if __name__ == "__main__":
